# avibe

./: .gitignore  AGENTS.md  Dockerfile  install.sh  main.py  pyproject.toml
.github/: dependabot.yml
config/: paths.py  platform_registry.py  v2_compat.py  v2_config.py  v2_sessions.py  v2_settings.py
core/: agent_auth_service.py  auth.py  backend_failure.py  backend_restart.py  caller_context.py  chat_discovery.py  controller.py  dependency_network.py  dock_store.py  file_browser_service.py  git_binary.py  git_runtime.py  inbox_events.py  internal_server.py  managed_runtime.py  message_context.py  message_dispatcher.py  message_mirror.py  message_output.py  processing_indicator.py  resource_governance.py  scheduled_tasks.py  session_activities.py  session_turns.py  show_git.py  show_pages.py  show_runtime.py  (+8 more)
scripts/memory_poc/harness/: README.md  pyproject.toml
scripts/memory_poc/harness/src/memory_poc/: __init__.py  cli.py  constants.py  corpus.py  environment.py  errors.py  generated_config.py  identifiers.py  launcher.py  lock_check.py  metrics.py  paths.py  pricing.py  provider.py  readiness.py  reports.py  request_guard.py  research_inspection.py  sanity.py  sidecar.py  stage2.py
scripts/memory_poc/harness/testdata/: sanity_messages.json
scripts/memory_poc/harness/tests/: test_corpus.py  test_environment.py  test_generated_config.py  test_launcher.py  test_lock.py  test_memory_poc_cli.py  test_metrics.py  test_paths.py  test_pricing.py  test_provider.py  test_reports.py  test_request_guard.py  test_research_inspection.py  test_sanity.py  test_stage2.py
(+663 files in other folders)
