[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "memory-poc-harness"
version = "0.1.0"
description = "Hermetic EverOS 1.1.3 provider POC harness"
requires-python = ">=3.12,<3.13"
dependencies = [
    "everos==1.1.3",
    "httpx==0.28.1",
    "psutil==7.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_poc"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
